[package]
name = "mw-pop3"
description = "RFC 1939 POP3 client + AccountBackend for Mailwoman (tokio/rustls)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
mw-engine = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
rustls-pki-types = { workspace = true }
webpki-roots = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
# SCRAM-SHA-256 SASL (RFC 5802/7677): SHA-256 + HMAC from the in-tree RustCrypto
# workspace deps; PBKDF2 is derived inline (single-block HMAC), so no `pbkdf2`
# crate is added. Not new workspace deps — already declared/resolved in-tree.
sha2 = { workspace = true }
hmac = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
mw-engine = { workspace = true }
chrono = { workspace = true }
