[package]
name = "mw-render"
description = "Disposable render worker: sanitizes hostile HTML in a separate process (SPEC §7.5)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
mw-sanitize = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[[bin]]
name = "mw-render"
path = "src/main.rs"
