[package]
name = "mw-sanitize"
description = "HTML email sanitizer for Mailwoman (SPEC §7.2)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# V4 wasm seam (plan §1.3): decrypted E2EE plaintext MUST be sanitized CLIENT-SIDE
# in the browser crypto/render worker — it must not round-trip to the server
# sanitizer (that would defeat end-to-end encryption / pre-stage the V6 zero-access
# break). `ammonia` is pure-Rust + wasm-compatible, so this crate gains a `cdylib`
# so it can be built to `wasm32` alongside `mw-crypto` by wasm-pack. `rlib` keeps
# the existing engine-side (native) consumers (mw-render/mw-export/mw-server)
# unchanged — they link the rlib; the cdylib is only produced when wasm-targeted.
# e0 sets this seam; e8 builds + wires the in-worker sanitize (plan §1.3 / risk #5).
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ammonia = { workspace = true }
