[package]
name = "mw-sanitize"
description = "HTML email sanitizer for Mailwoman (SPEC §7.2)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# V4 wasm seam (plan §1.3): decrypted E2EE plaintext MUST be sanitized CLIENT-SIDE
# in the browser crypto/render worker — it must not round-trip to the server
# sanitizer (that would defeat end-to-end encryption / pre-stage the V6 zero-access
# break). `ammonia` is pure-Rust + wasm-compatible, so this crate gains a `cdylib`
# so it can be built to `wasm32` alongside `mw-crypto` by wasm-pack. `rlib` keeps
# the existing engine-side (native) consumers (mw-render/mw-export/mw-server)
# unchanged — they link the rlib; the cdylib is only produced when wasm-targeted.
# e0 sets this seam; e8 builds + wires the in-worker sanitize (plan §1.3 / risk #5).
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ammonia = { workspace = true }

# CSS rewrite (SPEC §7.2 item 3): parse `<style>` blocks + inline `style=` with a
# real CSS parser (never regex), then property-allowlist, namespace selectors under
# the message container, drop positioning/@import/external-url, and clamp z-index.
# `cssparser` (MPL-2.0, pure-Rust) is ALREADY in-tree as a direct dependency of
# `ammonia`, so this adds zero new crates and is wasm-safe by construction (ammonia
# itself compiles this crate to wasm32). NOT wasm-gated — the CSS policy runs both
# server-side and in the browser crypto worker.
cssparser = "0.37"

# ── wasm-only browser boundary (plan §1.3): sanitize decrypted E2EE HTML in the
# crypto Web Worker, never on the server (that would defeat end-to-end encryption).
# Gated on the wasm32 target so the NATIVE build (mw-render/mw-export/mw-server) never
# links wasm-bindgen and is byte-for-byte unaffected — `cargo build --workspace`
# compiles this crate exactly as before; wasm-bindgen appears only under
# `cargo build -p mw-sanitize --target wasm32-unknown-unknown` / wasm-pack. ──
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }
