[package]
name = "mw-search"
description = "Engine-side full-text search index (Tantivy) for Mailwoman V2 (plan §3 e1)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tantivy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
