[package]
name = "mw-server"
description = "Mailwoman server: session auth, JMAP proxy, sanitize worker, embedded SPA"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "mw_server"
path = "src/lib.rs"

[[bin]]
name = "mailwoman"
path = "src/main.rs"

[dependencies]
mw-jmap = { workspace = true }
mw-store = { workspace = true }
mw-sanitize = { workspace = true }
mw-engine = { workspace = true }
mw-imap = { workspace = true }
mw-pop3 = { workspace = true }
mw-smtp = { workspace = true }
mw-autoconfig = { workspace = true }
# `ws` (backed by tokio-tungstenite) powers the `/jmap/ws` upgrade (§2.2).
axum = { workspace = true, features = ["ws"] }
tokio = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
reqwest = { workspace = true }
rust-embed = { workspace = true }
mime_guess = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
# V2 push + ACME listener (plan §1.2/§1.10, §3 e10). `tokio-tungstenite` also
# backs the WS test client; `tokio-rustls-acme` is the ACME/TLS listener;
# `futures-util` drives the SSE + WS streams. `rustls`/`tokio-rustls`/pki-types
# back the external-cert hot-reload listener (already in-tree, vetted by e0).
tokio-tungstenite = { workspace = true }
tokio-rustls-acme = { workspace = true }
futures-util = { workspace = true }
rustls = { workspace = true }
tokio-rustls = { workspace = true }
rustls-pki-types = { workspace = true }

[dev-dependencies]
mw-mock-jmap = { workspace = true }
reqwest = { workspace = true, features = ["cookies", "stream"] }
tokio = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
