[package]
name = "mw-server"
description = "Mailwoman server: session auth, JMAP proxy, sanitize worker, embedded SPA"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "mw_server"
path = "src/lib.rs"

[[bin]]
name = "mailwoman"
path = "src/main.rs"

[dependencies]
mw-jmap = { workspace = true }
mw-store = { workspace = true }
mw-sanitize = { workspace = true }
mw-engine = { workspace = true }
mw-export = { workspace = true }
mw-imap = { workspace = true }
mw-pop3 = { workspace = true }
mw-smtp = { workspace = true }
mw-autoconfig = { workspace = true }
# V6 MOUNT/WIRE (plan §3 e11): the four Batch-B crates whose traits + routers e11
# backs with the 0007 tables and mounts into `router()`.
mw-oauth = { workspace = true }
mw-mcp = { workspace = true }
mw-admin = { workspace = true }
mw-cache = { workspace = true }
# V7 route modules (plan §3 e9): directory/passwd/assist/plugins consumed by the
# additive route files (directory.rs/passwd.rs/assist.rs/plugins.rs). e14 mounts them
# and injects the built backends as request extensions.
mw-directory = { workspace = true }
mw-passwd = { workspace = true }
mw-assist = { workspace = true }
mw-plugin = { workspace = true }
# Constant-time admin password comparison uses argon2 verification when a hash is
# configured; the store-adapter needs no extra crypto (ServerKey seals/unseals).
argon2 = { workspace = true }
# `ws` (backed by tokio-tungstenite) powers the `/jmap/ws` upgrade (§2.2).
axum = { workspace = true, features = ["ws"] }
tokio = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
reqwest = { workspace = true }
rust-embed = { workspace = true }
mime_guess = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
# WKD (Web Key Directory) local-part hashing (SHA-1 + z-base-32, §7.3 e7) and
# ARF spool filenames (plan §3 e7).
sha1 = { workspace = true }
uuid = { workspace = true }
# V5 push relay + native bearer auth (plan §1.7/§2.2/§2.3, §3 e5). `web-push-native`
# (pure-Rust Web Push; builds the VAPID-signed RFC 8188 request, sent over the
# in-tree `reqwest`; re-exports the `p256` + `jwt-simple` it uses so keygen matches
# its curve version). `sha2` hashes bearer tokens for the `native_sessions` marker;
# `chrono` timestamps the push/native-session `*_at` columns.
web-push-native = { workspace = true }
sha2 = { workspace = true }
chrono = { workspace = true }
# V2 push + ACME listener (plan §1.2/§1.10, §3 e10). `tokio-tungstenite` also
# backs the WS test client; `tokio-rustls-acme` is the ACME/TLS listener;
# `futures-util` drives the SSE + WS streams. `rustls`/`tokio-rustls`/pki-types
# back the external-cert hot-reload listener (already in-tree, vetted by e0).
tokio-tungstenite = { workspace = true }
tokio-rustls-acme = { workspace = true }
futures-util = { workspace = true }
rustls = { workspace = true }
tokio-rustls = { workspace = true }
rustls-pki-types = { workspace = true }
# V6 observability + webhooks + REST (plan §3 e9). All workspace-declared (plan §5),
# pure-Rust + rustls throughout — NO openssl. `hmac` (+ in-tree `sha2`) signs
# outbound webhooks (HMAC-SHA256). `metrics`/`metrics-exporter-prometheus` back the
# auth-gated Prometheus `/metrics` (default-features off drops its HTTP listener —
# we render through the recorder handle). The `opentelemetry*` stack exports OTLP
# traces+metrics over `tonic` with rustls (`tls-roots`, verified openssl-free).
# `opentelemetry_sdk` is the provider/runtime half of that stack (not separately
# workspace-declared; pinned to the same 0.31 line, minimal `rt-tokio` feature).
# HMAC-SHA256 webhook signing. Pinned to 0.13 (NOT the workspace `hmac = "0.12"`,
# plan §5) because 0.12 targets `digest` 0.10 while the in-tree `sha2` is 0.11
# (`digest` 0.11); 0.13 is the matching RustCrypto release and is already resolved
# in Cargo.lock. TODO(e12): realign the workspace `hmac` pin to 0.13.
hmac = "0.13"
# `async-trait` backs the `WebhookRegistry` dyn-dispatch seam e11 fills against the
# 0007 `webhooks` table (already a workspace dep — used in dev-deps for tests).
async-trait = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio", "trace", "metrics"] }
tracing-opentelemetry = { workspace = true }

[dev-dependencies]
mw-mock-jmap = { workspace = true }
reqwest = { workspace = true, features = ["cookies", "stream"] }
tokio = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
# V5 push relay test: build a valid P-256 browser subscription key for the WebPush
# dispatcher round-trip (plan §3 e5 acceptance).
p256 = { workspace = true }
base64 = { workspace = true }
