[package]
name = "mw-sieve"
description = "GUI rule model <-> Sieve (RFC 5228) + ManageSieve (RFC 5804) + engine-side evaluator (plan §3 e2)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
rustls-pki-types = { workspace = true }
webpki-roots = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["io-util", "macros", "rt-multi-thread", "net", "time"] }
